--- a/drink.html
+++ b/drink.html
@@ -268,6 +268,31 @@
             <div class="size-cell">内容量</div>
             <div class="quantity-cell">数量</div>
         </div>
+        <div class="simple-item">
+            <div class="item-cell">炭酸水</div>
+            <div class="size-cell">1500ml</div>
+            <div class="quantity-cell">2</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ペプシ コーラ</div>
+            <div class="size-cell">1500ml</div>
+            <div class="quantity-cell">2</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">カルピスウォーター</div>
+            <div class="size-cell">1500ml</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">三ツ矢サイダー</div>
+            <div class="size-cell">1500ml</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">小岩井 純粋みかん</div>
+            <div class="size-cell">1500ml</div>
+            <div class="quantity-cell">2</div>
+        </div>
     </div>
     </div>
 
