--- a/drink.html
+++ b/drink.html
@@ -306,6 +306,160 @@
             <div class="size-cell">内容量</div>
             <div class="quantity-cell">数量</div>
         </div>
+        <div class="accordion-item">
+            <div class="accordion-toggle">
+                <div class="item-cell">ポテトチップス</div>
+                <div class="size-cell">-</div>
+                <div class="quantity-cell">計7</div>
+            </div>
+            <div class="accordion-content">
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- コンソメ</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">1</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- じゃがいもと塩</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">1</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- ？？</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">1</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- 堅あげうすしお</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">2</div>
+                </div>
+                <div class="sub-item-row">
+                    <div class="item-cell sub-item">- ブラックペッパー</div>
+                    <div class="size-cell">-</div>
+                    <div class="quantity-cell">2</div>
+                </div>
+            </div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">チョコあーんパン</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">2</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">カルパス</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">素焼きあたりめ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">たべっ子水族館</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">たべっ子どうぶつ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ルマンド</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ホームパイ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">きのこの里たけのこの山 抹茶</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">カントリーマアム</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">パイの実</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ポップコーンバターしょうゆ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">無限エビ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">サッポロポテトバーベキュー味</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ハッピーターン</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">コアラのマーチ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">かっぱえびせん</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">チータラ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">茎わかめ梅しそ味</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ジャイアントポッキー</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ポッキー 幸せの青いベリー</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">アルフォート</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">柿の種</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">1</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ロース生ハム</div>
+            <div class="size-cell">100g</div>
+            <div class="quantity-cell">3</div>
+        </div>
+        <div class="simple-item">
+            <div class="item-cell">ベビーチーズ</div>
+            <div class="size-cell">-</div>
+            <div class="quantity-cell">2</div>
+        </div>
     </div>
     </div>
 
