--- a/drink.html
+++ b/drink.html
@@ -45,9 +45,10 @@
       <ul>
         <li>宴会やレク用にサークルで買った飲み物やお菓子です。</li>
         <li>「これも欲しい！」というものがあれば、自由に持ち込みOKです。</li>
+        <li>給水器は設置されています。</li>
       </ul>
     </div>
-    <div class="last-updated">（最終更新 2025/08/08 18:20）</div>
+    <div class="last-updated">（最終更新 2025/08/08 21:30）</div>
 
     <div class="drink-list-container">
       <div class="h2-wrapper">
