--- a/drink.html
+++ b/drink.html
@@ -270,8 +270,13 @@
             <div class="quantity-cell">数量</div>
         </div>
         <div class="simple-item">
+            <div class="item-cell">おーいお茶</div>
+            <div class="size-cell">2000ml</div>
+            <div class="quantity-cell">2</div>
+        </div>
+        <div class="simple-item">
             <div class="item-cell">炭酸水</div>
-            <div class="size-cell">1500ml</div>
+            <div class="size-cell">1000ml</div>
             <div class="quantity-cell">2</div>
         </div>
         <div class="simple-item">
