--- a/drink.html
+++ b/drink.html
@@ -330,7 +330,7 @@
                     <div class="quantity-cell">1</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- ？？</div>
+                    <div class="item-cell sub-item">- のり塩</div>
                     <div class="size-cell">-</div>
                     <div class="quantity-cell">1</div>
                 </div>
