--- a/drink.html
+++ b/drink.html
@@ -335,12 +335,12 @@
                     <div class="quantity-cell">1</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- 堅あげうすしお</div>
+                    <div class="item-cell sub-item">- 堅あげ うすしお</div>
                     <div class="size-cell">-</div>
                     <div class="quantity-cell">2</div>
                 </div>
                 <div class="sub-item-row">
-                    <div class="item-cell sub-item">- ブラックペッパー</div>
+                    <div class="item-cell sub-item">- 堅あげ ブラックペッパー</div>
                     <div class="size-cell">-</div>
                     <div class="quantity-cell">2</div>
                 </div>
