--- a/team.html
+++ b/team.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBCS25Team</title>
+    <title>BBSC25 Drink</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
-
 </head>
 <body>
+
     <header>
-    <h1>Team</h1>
+    <h1>Drink</h1>
+
     <!-- ハンバーガーアイコン -->
     <div class="menu-icon" id="menu-toggle">&#9776;</div>
 
@@ -25,6 +26,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="items.html">Items</a></li>
             <li><a href="team.html">Team</a></li>
+            <li><a href="drink.html">Drink</a></li>
             <li class="dropdown">
                 <span class="dropdown-toggle">Schedule</span>
                 <ul class="dropdown-menu">
@@ -34,7 +36,7 @@
                     <li><a href="schedule.html#day4">DAY4</a></li>
                 </ul>
             </li>
-           
+            
         </ul>
     </nav>
     </header>
