--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBSC25 Drink</title>
+    <title>BBSC25 Team</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-    <h1>Drink</h1>
+    <h1>Team</h1>
 
     <!-- ハンバーガーアイコン -->
     <div class="menu-icon" id="menu-toggle">&#9776;</div>
